--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django = "*"
+aiogram = "*"
+psycopg2 = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
