--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -3,6 +3,5 @@ psycopg2-binary
 python-dotenv~=1.0.0
 djangorestframework~=3.14.0
 djoser~=2.2.0
-
-aiogram~=2.25.1
-aiohttp~=3.8.4
+requests~=2.29.0
+celery~=5.2.7
