--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,9 +7,12 @@ server {
 
 	location / {
 		proxy_pass http://django;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $host;
+        proxy_redirect off;
 	}
 
-    location /static/ {
-        alias /app/static/;
+    location /staticfiles/ {
+        alias /var/www/html/staticfiles/;
     }
 }
